# deepAI

./: README.md  nohup.out
EE364a/: iterate.m  iterate.m~  rationalFit.m
EE364a/.ipynb_checkpoints/: FourInterestMatrixEigVector-checkpoint.ipynb  solveLinear-checkpoint.ipynb
EE364a/Efficient_numeriical_method/: code.m  solver.m
EE364a/cvx_tutorial/: least_square.m  least_square_bound.m
EE364a/gradient_newton/: Appro_newton.m  DiagHessionMethod.m  NewtonMethod.m  ReusingHessianMethod.m  clamp.m  fobj.m  fobj_diag_hessian.m  fobj_grad.m  fobj_hessian.m  linear_search.m  main.m  solver.m
EE364a/piecewice/: piece_func.m  solve.m
EE364a/team_play/: main.m
EE364a/threeeWayClassication/: sep3way_data.m  test.m
bigdata/spark/: Untitled.ipynb
c++/: PriorityQueue.cpp  PriorityQueue.h  hw.cpp
c++/c++plus/: BadString.cc  BadString.h  a.out
c++/cmake/: 常用变量.ipynb
c++/cmake/v3/: CMakeLists.txt  mysqrt.cxx  tutorial.cxx
c++/cmake/v3/include/: TutorialConfig.h
c++/computerGraph/: a.out  a3.tgz  helloworld  helloworld.cpp  main.c
c++/computerGraph/opengl/checkversion/checkversion/: CMakeLists.txt  config.h  main.cpp
c++/computerGraph/opengl/checkversion/checkversion/lib/gl3w/: CMakeLists.txt
c++/computerGraph/opengl/triangle/begin/: CMakeLists.txt  CMakeLists.txt.user.1613b5c  LoadShaders.cpp  commonHeader.h  indexbuffer.cpp  indexbuffer.h  main.cpp  myutil.cpp  myutils.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexlayout.cpp  vertexlayout.h  youtubeDemo.cpp
c++/computerGraph/vecmath/: CMakeLists.txt  main.cpp
c++/computerGraph/vecmath/lib/: a.out  main
c++/computerGraph/vecmath/src/: CMakeLists.txt
c++/igg/hw4/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
c++/igg/hw4/igg_image/io_strategies/: dummy_strategy.h  png_strategy.cpp  ppm_iostrategy.h
c++/opencv/: CMakeLists.txt  begin.cc  convert.cc  core.cc  matrix.cc  read.cc
c++/qt/week1/FileComp/: CMakeLists.txt  main.cpp  myres.qrc
c++/qt/week1/basicApp/: CMakeLists.txt  main.cpp
c++/qt/week1/menu_dialog/: CMakeLists.txt  dialog.cpp  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mydialog.ui
c++/qt/week1/qtopengl/: CMakeLists.txt  CMakeLists.txt.user.1613b5c  Camera.h  dialogmaterial.cpp  dialogmaterial.h  dialogmaterial.ui  draw.cpp  main.cpp  mainwindow.cpp  mainwindow.h  material.h  mesh.cpp  mesh.h
c++/qt/week1/qtopengl/build-qtopengl-Desktop_Qt_5_12_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  moc_dialogmaterial.cpp  moc_mainwindow.cpp  qtopengl  qtopengl.cbp  qtopengl_automoc.cpp  rules.ninja
c++/qt/week1/qtopengl/include/objs/: Object3D.h  Sphere.h  Transform.h  Triangle.h  light.h  material.h  mesh.h
c++/qt/week1/qtopengl/include/utils/: draw.h
c++/qt/week1/qtopengl/src/objs/: Camera.cpp  Object3D.cpp  Sphere.cpp  Transform.cpp  Triangle.cpp  light.cpp  material.cpp  mesh.cpp
c++/qt/week1/qtopengl/src/utils/: draw.cpp
c++/qt/week1/qtopengl/src/view/: dialogmaterial.cpp  dialogmaterial.h  dialogmaterial.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
c++/torch/: CMakeLists.txt  Net.cpp  Net.h  main.cpp
c++/torchTutoral/: CMakeLists.txt  main.cpp
c++/tutorial/: a.out
c++/tutorial/17/: CMakeLists.txt  check_it.cpp  flush.cpp  get_getline.cpp  getline.cpp  input_exceptions.cpp  input_status.cpp  iomanip.cpp  put.cpp  width_fill_precision.cpp
c++/week1/: dice.c  dice.cpp  generics.cpp  homework1.c  homework1.cpp
c++/week2/: 2.1.cpp  2.2.cpp  2.7  2.7.cpp  2.8.cpp  2.9.cpp  a.out
c++/week3/: .3.2.cpp.swp  .3.4.cpp.swp  3.12.cpp  3.2.cpp  3.2.cpp.cpp  3.2.cpp.h  3.3.cpp  3.4.cpp  3.6.cpp  a.out  hw.cpp
c++/week4/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Node.cpp  Node.h  PriorityQueue.cpp  PriorityQueue.h  T.cpp  T.h  main.cpp
course2/week3/: Tensorflow+Tutorial.py
course4/week3/: test.py
course5/week1/: LSTMGen.py  dinoUtils.py  rnn_utils.py
cs223A/: Untitled.ipynb
cs224w/: hw2-bundle.tgz  hw3-bundle.tgz
cs224w/hw0-bundle/: hw0.ipynb
cs224w/hw1-bundle/: hw1-q1-starter.py  lavain.py  q2.ipynb  sanTest.py  utils.py
cs231n/assignment1/: Untitled.ipynb  features.ipynb  knn.ipynb  (+3 more)
daily/8/opencv_tutoral/: CMakeLists.txt  codecs  commom.h  template.txt  video.ipynb
daily/8/opencv_tutoral/.ipynb_checkpoints/: video-checkpoint.ipynb
daily/8/opencv_tutoral/basic/: CMakeLists.txt  basic.cpp  float_type.cpp  matrix_clone.cpp  normal_example.cpp  vector_begin.cpp
daily/8/opencv_tutoral/binary_images/: CMakeLists.txt  binary_example.cpp  connectComponent_example.cpp  dilate_erode_example.cpp  dist_example.cpp  hello.cpp
daily/8/opencv_tutoral/core/: Image.h  Matching.h  Morphological.h  common.h  gui.h
daily/8/opencv_tutoral/filter_template/: CMakeLists.txt  tm_search.cpp
docker/: mongo-docker-compose.yml
dutyStudy/: Hadoop集群安装.ipynb  QQ  automate start oracle instance  c++  caffe  checkconfig  cuda.txt  dbora.sh  firewall.sh  gcc  git  information Thoery  install desktop  latex  linux change swap  mysql  netstat  nfs  nvidia-driver  opencv  oracle  parallel-programming  pygraphviz  selinux  splunk  square.cu  tensorflow_datapipline  tkinter  tomcat_ssh  ubuntu_vnc_ftp_ssh  vagrant  virtual  vlc  weblogic 安装部署.odt
ippackage/: ML.py  dbutils.py  mytest.py  test_freegate.py  test_vpn.py
myfaceproject/: Persondb.py  faces.pickle  openfaceModel.py  recognition.py
增值税/: 	国家税务总局公告2015年第99号  	国家税务总局公告2016年第87号  	国家税务总局公告2017年第11号  	国税函〔2007〕446号  	国税函〔2007〕461号  	国税函〔2008〕1074号  	国税函〔2009〕456号  	国税函〔2009〕54号  	国税发〔2008〕33号  	国税发〔2008〕46号  	国税发〔2009〕10号  	国税发〔2009〕7号  	税总函〔2013〕459号  	税总发〔2017〕124号  	财关税〔2009〕48号  	财关税〔2009〕63号  	财税〔2007〕127号  	财税〔2013〕111号  	财税〔2013〕11号  	财税〔2015〕35号  	财税〔2017〕17号  交通运输部公告2017年第66号  发改价格〔2009〕1607号  国务院令第538号  国发〔2008〕21号  国发〔2016〕26号  国发明电〔2016〕1号  国家税务总局 外交部公告2016年第58号  国家税务总局令第19号  国家税务总局公告2012年第20号  国家税务总局公告2012年第21号  国家税务总局公告2012年第22号  国家税务总局公告2012年第23号  国家税务总局公告2012年第24号  国家税务总局公告2012年第29号  国家税务总局公告2012年第33号  国家税务总局公告2012年第35号  国家税务总局公告2012年第38号  国家税务总局公告2012年第43号  国家税务总局公告2012年第50号  (+258 more)
(+1608 files in other folders)
