cmake_minimum_required(VERSION 3.0)
project(c++)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_DEBUG "-g")
# set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
add_executable(put put.cpp)
add_executable(flush flush.cpp)
add_executable(width_fill_precision width_fill_precision.cpp)
add_executable(iomanip iomanip.cpp)
add_executable(check_it check_it.cpp)
add_executable(input_status input_status.cpp)
add_executable(input_exceptions input_exceptions.cpp)
add_executable(get_getline get_getline.cpp)
add_executable(getline getline.cpp)